Fixed issue with email causing viewport to be enlarged on smaller devices. Added link styling to global styles.

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -3,6 +3,7 @@
 body {
   color: $gray-600;
 }
+
 @include media-breakpoint-up(lg) {
   body {
     padding-top: 0;
@@ -33,4 +34,11 @@ p.lead {
   text-transform: uppercase;
   font-weight: 500;
   font-size: 1.5rem;
+}
+
+a {
+  text-decoration: none;
+  &:hover {
+    text-decoration: underline;
+  }
 }
