--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,2 +1,11 @@
 // Spacing Variables
 $sidebar-width: 17rem;
+$spacer: 1rem;
+
+$headings-font-weight: 700;
+
+$headings-color: #343a40;
+
+$h1-font-size: 6rem;
+$h2-font-size: 3.5rem;
+$h3-font-size: 2rem;
