--- a/src/scss/components/_icons.scss
+++ b/src/scss/components/_icons.scss
@@ -9,6 +9,7 @@
     color: $white;
     border-radius: 100%;
     font-size: 1.5rem;
+    line-height: 1rem;
     margin-right: 1.5rem;
     &:last-child {
       margin-right: 0;
